# cpu_emulator

./: Cargo.toml
assembler/: Cargo.toml
assembler/src/: instruction_set.rs  lib.rs  parser.rs  tokenizer.rs
assembler/src/instruction/: asm_instruction.rs  jump_condition.rs  mod.rs  operand.rs
assembler/tests/: integration.rs
compiler/: Cargo.toml  README.md
compiler/src/: instruction_set.rs  lib.rs  tokenizer.rs
compiler/tests/: integration.rs
emulator_core/: Cargo.toml
emulator_core/src/: helper.rs  instruction.rs  instruction_set.rs  lib.rs  processor.rs  program.rs  register.rs  stack.rs  word.rs
emulator_core/tests/: integration.rs
procem/: Cargo.toml  README.md
procem/src/: helper.rs  instruction.rs  lib.rs  processor.rs  program.rs  register.rs  stack.rs  word.rs
procem_default/: Cargo.toml  LICENSE  README.md
procem_default/src/: lib.rs  parser.rs  tokenizer.rs
procem_default/src/instruction/: asm_instruction.rs  jump_condition.rs  mod.rs  operand.rs
procem_default/tests/: integration.rs
src/: instruction.rs  lib.rs  main.rs  processor.rs  program.rs  register.rs  stack.rs
src/instruction_set/: default_instruction_set.rs  mod.rs
tests/: integration.rs
